apps/Juice-shop/service.yml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  labels:
    app: juice-shop
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: juice-shop
